# CLabs

./: CMakeLists.txt
hw1/: README.md  hw1.c
hw1/Отчет/: Отчёт1.tex
hw2/: README.md  hw2.c
hw2/Отчет/: Отчет2.tex
hw3/: README.md  hw3.c
hw3/Отчет/: Отчет3.tex
hw4/: README.md  hw4.c
hw4/Отчет/: Отчет4.tex
hw5/: README.md  hw5.c
hw5/Отчет/: Отчет5.tex
hw6/: README.md  dop6.c  hw6.c
hw6/Отчет/: Отчет6.tex
hw7/: README.md  hw7.c
hw7/Отчет/: Отчет.tex
hw8/: README.md  hw8.c  repository.c  structs.h
hw8/Отчет/: Отчет.tex
hw9/: README.md  hw9.c  repository.c  sorting.c  structs.h  timing.c
hw9/Отчет/: Отчет.tex
kp1/: README.md  kp1.c
kp1/Отчет/: Отчет.tex
kp2/: README.md  kp2.c
kp2/Отчет/: Отчет.tex
