cmake_minimum_required(VERSION 3.26)
project(Homeworks C)

set(CMAKE_C_STANDARD 11)

add_library(Homeworks
        hw1/hw1.c
        hw2/hw2.c
        hw3/hw3.c
        hw4/hw4.c
        hw5/hw5.c
        hw6/hw6.c
        hw6/dop6.c
        hw7/hw7.c
        test1.c
        kp1/kp1.c
        test2.c
        kp2/kp2.c
        hw8/hw8.c
        hw8/structs.h
        hw8/repository.c
)
